--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Charteye GameVault - Your Gaming Universe</title>
     <link rel="canonical" href="https://charteye.online" />
     <link rel="stylesheet" href="src/styles/main.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GN9ZEJZD0N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GN9ZEJZD0N');
+</script>
 </head>
 <body>
     <header class="header">
